@@ -5,6 +5,10 @@
 # License: http://snmplabs.com/pysnmp/license.html
 #
 
+import sys
+
 
 class PySnmpError(Exception):
-    pass
+    def __init__(self, message):
+        self.cause = sys.exc_info()
+        Exception.__init__(message + ', caused by ' + self.cause[1])
